# CTorch

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
docs/: doxygen_extra_stylesheet.sty
include/: array.h  autograd.h  ctorch.h  error_codes.h  nn.h  pbar.h  print.h  random.h  tensor.h
include/array/: array.h  array_ops.h
src/: ctorch.c  error_codes.c  pbar.c  print.c
src/array/: arithmetic.c  array.c  array_ops.c  array_val.c  broadcast.c  inplace.c  matrix_ops.c
src/array/kernel/: matmul.c  ops.h
src/autograd/: arithmetic.c  autograd.c  autograd_ops.c  context.c  reverse_mode.c
src/autograd/private/: callable_grads.c  callable_grads.h  utils.c
src/nn/: container.c  functional.c  layers.c  module.c
src/random/: prng.c  random.c
src/tensor/: arithmetic.c  dependency.c  environ.c  tensor.c  tensor_ops.c
tests/: CMakeLists.txt  main.c
tests/array_tests/: array_ops_tests.c  array_ops_tests.h  array_tests.c  array_tests.h  array_val_tests.c
tests/tensor_tests/: tensor_ops_tests.c  tensor_tests.c  tensor_tests.h
